@@ -2,7 +2,6 @@ package chess.domain.piece;
 
 import chess.domain.board.Square;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 public class Knight extends Piece {
@@ -18,7 +17,7 @@ public class Knight extends Piece {
         if (!KnightVector.isExistMovableVector(distanceX, distanceY)) {
             throw new IllegalArgumentException("해당 기물이 움직일 수 있는 경로가 아닙니다.");
         }
-        return new ArrayList<>(Arrays.asList(destination));
+        return new ArrayList<>(List.of(destination));
     }
 
     @Override
